# med-explain

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  explain.py  fhir.py  lab_utils.py  loader.py  pyproject.toml  requirements.txt  summary.py
.github/workflows/: ci.yml
examples/: synthetic-lab-report.md
tests/: test_chart.py  test_explain.py  test_fhir.py  test_loader.py  test_no_print.py  test_smoke.py  test_support_routes.py
