[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = 'py311'

[tool.ruff.lint]
select = ['E', 'F']

[tool.ruff.format]
quote-style = 'double'
indent-style = 'space'
line-ending = 'lf'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'
